stylesheet.css
* {
    box-sizing: border-box;    
}

body{
    color: #ffffff;
}

header{
    height: 600px;
}

main p{
    font-size: 1.2rem;
}

.bg-img{
    background-image: url(images/bucking.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

header h1{
    margin-top: 250px;
    font-size: 6rem; 
    color: #ffffff;
    border: solid 4px #ffffff;
    border-radius: 8px;
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    background-color: #a86e3c;
}

#rodeos{
    list-style-type: none;
    width: 90%;
    margin: 0;
    padding: 0;
    margin-right: auto;
    margin-left: auto;
}

#rodeos li{
    font-size: 1.3rem;
    margin: 10px;
    background-color: #db6702;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

#rodeos li a{
    text-decoration: none;
    color: white;
}

#rodeo-events{
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 95%;
    margin-left: 15%;
    margin-right: auto;
}

#rodeo-events li{
    display: inline-block; 
    text-align: center;
    width: 25%;
    margin-right: auto;
    margin-left: auto;
}

#cowboy-tools{
    list-style-type: none;
}

#cowboy-tools li{
    margin-bottom: 10px;
}

@media only screen and (max-width: 550px){
    #logo{
        font-size: 4rem;
    }

    #rodeo-events{
        margin: 0;
        padding: 0;
        width: 95%;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 30px;
    }

    #rodeo-events li{
        display: block;
        width: 60%;
        margin-right: auto;
        margin-left: auto;
    }

}

@media only screen and (max-width: 992px){
    #cowboy-tools{
        width: 90%;
        margin-left: auto;
        margin-right: auto;
    }

    #cowboy-tools li{
        display: inline-block;
        width: 25%;
    }
}

